# serializer version: 1
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][message_data]
  dict({
    'attributes': dict({
      'messages': list([
      ]),
    }),
    'id': '1234',
    'type': 'messages',
  })
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.battery]
  dict({
    'battery_percent': 50,
    'remaining_charging_time': 309,
  })
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.calendar]
  dict({
    'tasks': list([
      dict({
        'duration': datetime.timedelta(seconds=2940),
        'friday': False,
        'monday': True,
        'saturday': False,
        'start': datetime.time(2, 0),
        'sunday': False,
        'thursday': False,
        'tuesday': False,
        'wednesday': False,
        'work_area_id': None,
      }),
    ]),
  })
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.capabilities]
  dict({
    'can_confirm_error': False,
    'headlights': False,
    'position': False,
    'stay_out_zones': False,
    'work_areas': False,
  })
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.metadata]
  dict({
    'connected': True,
    'status_dateteime': datetime.datetime(2023, 10, 18, 22, 58, 52, 683000, tzinfo=datetime.timezone.utc),
  })
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.mower]
  dict({
    'activity': <MowerActivities.PARKED_IN_CS: 'parked_in_cs'>,
    'error_code': 1,
    'error_datetime': datetime.datetime(2024, 10, 18, 16, 37, 49, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    'error_key': 'outside_working_area',
    'inactive_reason': <InactiveReasons.NONE: 'none'>,
    'is_error_confirmable': False,
    'mode': <MowerModes.MAIN_AREA: 'main_area'>,
    'state': <MowerStates.RESTRICTED: 'restricted'>,
    'work_area_id': None,
    'work_area_name': None,
  })
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.planner]
  dict({
    'external_reason': None,
    'next_start_datetime': datetime.datetime(2023, 6, 5, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    'override': dict({
      'action': <Actions.NOT_ACTIVE: 'not_active'>,
    }),
    'restricted_reason': <RestrictedReasons.WEEK_SCHEDULE: 'week_schedule'>,
  })
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.positions]
  list([
  ])
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.settings]
  dict({
    'cutting_height': None,
    'headlight': dict({
      'mode': None,
    }),
  })
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.statistics]
  dict({
    'cutting_blade_usage_time': None,
    'downtime': None,
    'number_of_charging_cycles': None,
    'number_of_collisions': None,
    'total_charging_time': None,
    'total_cutting_time': None,
    'total_drive_distance': None,
    'total_running_time': None,
    'total_searching_time': None,
    'uptime': None,
  })
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.stay_out_zones]
  None
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.system]
  dict({
    'model': 'Automower Aspire',
    'name': 'Test Mower 1',
    'serial_number': '123',
  })
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.work_area_dict]
  None
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.work_area_names]
  None
# ---
# name: test_mower_snapshot[low_feature_mower_data-low_feature_message_data][status.work_areas]
  None
# ---
